--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "aggregate-error": "^3.1.0",
+    "and": "^0.0.3",
     "ansi-colors": "^4.1.3",
     "ansi-escapes": "^4.3.2",
     "ansi-regex": "^5.0.1",
@@ -36,6 +37,7 @@
     "bluebird": "^3.7.2",
     "buffer": "^5.7.1",
     "buffer-crc32": "^0.2.13",
+    "build": "^0.1.4",
     "cachedir": "^2.4.0",
     "call-bind": "^1.0.7",
     "caseless": "^0.12.0",
